# VideoCraft

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.markdown  THIRD_PARTY_LICENSES.md  _arch_check.py  build_portable.py  dev.cmd  pyproject.toml  requirements-base.txt  requirements.in  requirements.myenv-3.14.snapshot.txt  requirements.txt  verify_pyav_canvas.py  verify_webpreview_widget.py  verify_webview_host.py  verify_webview_smoke.py  verify_webview_step1.html  verify_webview_step2.py
.github/workflows/: build-portable.yml  build-windows.yml  deploy-site.yml
core_rpc/: __init__.py  dispatch.py  jobs.py  protocol.py  registry.py  server.py  session.py
core_rpc/methods/: __init__.py  _jobs_util.py  ai.py  capability.py  creation.py  embedded_ai.py  env.py  gpu.py  material.py  models.py  project.py  system.py
desktop/: .gitignore  README.md  dev.ps1  dev.sh  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
desktop/electron/: appInfo.ts  buildInfo.ts  ffmpeg.ts  main.ts  menu.ts  paths.ts  preload.ts  sidecar.ts
desktop/spike-assets/: gen-test-clips.mjs
desktop/src/: sidecar.integration.test.ts
docs/: BACKLOG.md  packaging.md  release-checklist.md  task.md  versioning.md
docs/_archive/: 01-architecture.md  03-ui-hub.md  07-operations-registry.md  10-media-format-modules.md  11-hub-layout-persistence.md  README.md  adr-0008-migration-tasks.md  ai-clip-redesign.md  backlog-archive-01_2026-04_2026-06.md  composition-style.md  electron-migration-plan.md  news-desk-derivative.md  publish-sidecar.md  task-archive-01_2026-05-19_2026-06-05.md  task-archive-02_2026-06-05_2026-06-08.md  task-archive-03_2026-06-08_2026-06-09.md
docs/adr/: 0001-chapters-envelope.md  0002-subtitle-oneline-invariant.md  0003-editor-modules-decoupling.md  0004-three-tier-plugin-architecture.md  0005-componentized-data-layer.md  0006-composition-timeline-ir.md  0007-component-edit-ui-metadata.md  0008-plugins-ts-python-capability-gateway.md  0009-uv-project-dependency-management.md  0010-sidecar-http-transport.md  0011-spatial-crop-clip-transform.md  README.md
docs/design/: 00-overview.md  01-architecture.md  02-project-model.md  03-ui-hub.md  04-ai-router.md  05-use-cases.md  06-core-layer.md  09-file-naming-convention.md  12-i18n.md  aistack-integration.md  composition-otio-foundation.md  composition-timeline-v0.md  packaging-design.md
docs/draft/: SubtitleWorkbench.md  adr-0008-migration-tasks.md  ai-clip-redesign.md  architecture-vision.md  asr_local_selection.md  chapter-verify-edit.md  clip-component-migration.md  composition-otio-foundation.md  derivative-snapshot-principle.md  electron-migration-design.md  llm_local_selection_v2.md  local-ai-decoupling.md  local_ai_progress.md  news_desk-ux-v0.3.md  packaging-design.md  program-script-clip.md  project-restructure.md  substrate-spike-findings.md  tech-selection-embedded-ai.md  tts_local_selection_v4.md
docs/integration-tests/: 2026-05-07-aistack-asr-e2e.md
docs/public/: download.md  index.mdx  quick-start.md
docs/research-notes/: sherpa-detour.md
local_ai/tts_qwen3/: README.md  docker-compose.yml
packaging/: build_sidecar.ps1  core_rpc.spec  fetch_ffmpeg.ps1  generate_build_info.ps1  sidecar_entry.py
prompts/: clip.find-peaks.md  clip.package.md  clip.rank-chapters.md  subtitle.pack.md
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/scripts/: sync-docs.mjs
src/: VideoCraftHub.py  __init__.py  hub_layout.py  i18n.py  launcher.py  operations.py  project.py
src/core/: asr.py  burn_presets.py  burn_subs.py  chapters_io.py  clip_hook_outro_presets.py  clip_presets.py  clip_render.py  composer_model.py  derivative_types.py  embedded_ai_install.py  env_check.py  gpu.py  gpu_install.py  io_utils.py  lang_names.py  markdown_fmt.py  paths.py  project_schema.py  prompts.py  prompts_fixtures.py  prompts_schemas.py  publish_sidecar.py  runtime_extras.py  sentence_regroup.py  settings.py  source_acquire.py  source_context.py  source_context_ai.py  srt_ops.py  srt_quality.py  subtitle_analysis.py  subtitle_analysis_runners.py  subtitle_check.py  subtitle_ops.py  subtitle_pipeline.py  translate.py  tts.py  tts_dubbing.py  user_data.py  video_concat.py  (+2 more)
src/creations/: __init__.py  component_spec.py  material_binding.py
src/i18n/: en.json  zh.json
src/materials/: __init__.py
src/ui/: ai_error_dialog.py  chapter_editor.py  clip_widgets.py  collapsible_frame.py  composition_preview.html  crop_overlay.py  dialog_utils.py  disclaimer_dialog.py  new_derivative_dialog.py  new_project_dialog.py  news_context_pane.py  source_add_dialog.py  source_basic_info_dialog.py  source_context_dialog.py  source_details_dialog.py  source_prepare_modal.py  source_preview_pane.py  srt_preview_pane.py  subs_lang_picker.py  subtitle_analysis_preview.py  subtitle_check_dialog.py  subtitles_dialogs.py  subtitles_progress_modal.py  video_preview_pane.py  web_preview.py  web_preview_clip.html  web_preview_host.py
tests/: conftest.py  test_arch_clip.py  test_arch_materials.py  test_arch_news_desk.py  test_io_utils.py  test_subtitle_pipeline_paths.py  test_translate.py
tests/composition/: test_arch_composition.py  test_arch_pr5_legacy_gone.py  test_compile.py  test_components_shape.py  test_engine_contracts.py  test_news_desk_compile.py  test_pr4_timeline_render_e2e.py  (+3 more)
(+366 files in other folders)
