[project]
name = "VideoCraft"
version = "0.3.6"
description = "AI-powered video creation and processing tool"
authors = [
    { name = "OldApeTalk" },
]
license = { file = "LICENSE" }
readme = "README.markdown"
# Only 3.12 is exercised (sidecar freeze + dev myenv are both 3.12); pinning the
# floor here keeps uv.lock free of 3.10/3.11 marker branches.
requires-python = ">=3.12"

# ── base tier ────────────────────────────────────────────────────────────────
# The PyInstaller freeze input (packaging/build_sidecar.ps1 → core_rpc.exe).
# Non-AI core + engine + cloud SDKs only. Embedded-AI / GPU native runtimes are
# opt-in extras below (installed at runtime into user_data/runtimes/py-extra,
# never frozen). This is the SINGLE source of truth for version pins — see
# docs/adr/0009-uv-project-dependency-management.md.
dependencies = [
    "yt-dlp==2026.6.9",       # bump to latest at each release cut (packaging-design.md §10)
    "requests==2.32.5",
    "srt==3.5.3",
    "google-genai==1.55.0",
    "fish-audio-sdk==1.3.0",
    "openai==2.30.0",
    "json-repair==0.59.9",
    "edge-tts==7.2.8",
    "Pillow==12.0.0",
    "pywin32==311; sys_platform == 'win32'",
    # Bundled into the freeze so the frozen sidecar can `--vc-pip install` opt-in
    # extras (CUDA wheels, embedded-AI) into py-extra at runtime. A uv venv has no
    # pip by default, so it must be a declared dependency to enter the freeze.
    "pip==26.1",
    # Sidecar transport. The Electron host talks to this sidecar over HTTP
    # (POST /rpc) + SSE (GET /events) instead of the legacy newline-JSON-over-stdio
    # loop, which deadlocked when a native C-extension was first imported on a job
    # thread while the main thread was parked in a blocking stdin read (ADR-0010).
    # uvicorn is the ASGI server; plain (not uvicorn[standard]) on purpose — uvloop
    # is Linux-only and httptools is an optional speedup the asyncio loop lives
    # without. Base tier: the sidecar cannot start without them.
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
]

# ── runtime opt-in tiers ──────────────────────────────────────────────────────
# Installed at runtime into py-extra via core/runtime_extras.py (NOT uv sync in
# the packaged app). Declared here so (a) pyproject is the single pin authority
# and (b) dev can `uv sync --extra embedded-ai` to make them importable. The
# runtime installers (src/core/{embedded_ai_install,gpu_install}.py) mirror these
# pins as module constants; tests/core/test_dependency_pins.py fails on drift.
[project.optional-dependencies]
embedded-ai = [
    "faster-whisper==1.2.1",      # CTranslate2-backed Whisper (CPU + CUDA via CT2 runtime pick)
    "llama-cpp-python==0.3.22",   # CPU wheel from the abetlen index (see [tool.uv.sources])
]
# CUDA 12 runtime DLLs that faster-whisper / CTranslate2 pick up automatically.
# Pinned to the versions verified against ctranslate2 4.7.1 — ABI-sensitive, bump
# in lockstep when ctranslate2 changes (ADR-0009). The cu124 llama-cpp swap is a
# runtime-only force-reinstall and intentionally NOT modelled here (§3 of plan;
# one lock can't hold both cpu and cu124 llama-cpp).
gpu = [
    "nvidia-cublas-cu12==12.9.2.10",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.22.0.52",
    "nvidia-cufft-cu12==11.4.1.4",
]

# ── dev / build tooling (PEP 735 — never shipped, never frozen) ───────────────
[dependency-groups]
build = ["pyinstaller==6.16.0"]
dev = [
    "pytest",
    { include-group = "build" },
]

[tool.uv]
# VideoCraft runs from src/ on sys.path (pythonpath in pytest config), it is not
# an installable package — tell uv not to build/install the project itself.
package = false

# llama-cpp-python wheels are published outside PyPI (building from source on
# Windows breaks: vendored llama.cpp paths exceed MAX_PATH). The CPU wheel index:
[[tool.uv.index]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
explicit = true   # only packages that point at it via [tool.uv.sources] use it

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-cpu" }

[tool.pytest.ini_options]
# "." (repo root) makes the core_rpc sidecar package importable in tests;
# "src" makes the core/business modules (project, materials, …) importable.
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = [
    "-ra",
    "--strict-markers",
    "-q",
]
